--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,5 +34,5 @@ jobs:
           push: true
           platforms: linux/amd64, linux/arm64
 #         ,linux/arm/v6, linux/arm/v7
-          tags: vanhauser/hydra:latest
+          tags: byt3n33dl3/thc-Hydra:latest
         
